[project]
name = "pySigma"
version = "1.0.0rc2"
license = "LGPL-2.1-only"
description = "Sigma rule processing and conversion tools"
authors = [
  { name = "Thomas Patzke", email = "thomas@patzke.org" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security"
]

[project.urls]
Repository = "https://github.com/SigmaHQ/pySigma"

[tool.poetry]
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.9"
packaging = "^25.0"
pyparsing = "^3.2"
pyyaml = "^6.0"
requests = "^2.32"
jinja2 = "^3.1.6"
types-pyyaml = "^6.0.12.20240917"

[tool.poetry.group.dev.dependencies]
black = "^24.1"
mypy = "^1.16"
pip = "^25.1"
pre-commit = "^4.2"
pylint = "^3.3"
pytest = "^8.4"
pytest-cov = "^6.2"
pytest-mypy = "^1.0"
Sphinx = "^7.4" # 8.0 is not compatible with Python 3.9
defusedxml = "^0.7"
types-requests = "^2.32.0.20250306"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["online"]
