[project]
name = "pySigma"
version = "1.1.0"
license = "LGPL-2.1-only"
description = "Sigma rule processing and conversion tools"
authors = [
  { name = "Thomas Patzke", email = "thomas@patzke.org" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security"
]

[project.urls]
Repository = "https://github.com/SigmaHQ/pySigma"

[tool.poetry]
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.10"
packaging = "^25.0"
pyparsing = "^3.2.5"
pyyaml = "^6.0.3"
requests = "^2.32.5"
jinja2 = "^3.1.6"
types-pyyaml = "^6.0.12.20250915"
typing-extensions = "^4.15.0"
diskcache = "^5.6.3"
diskcache-stubs = "^5.6.3.6.20240818"

[tool.poetry.group.dev.dependencies]
black = "^25.11"
mypy = "^1.18"
pip = "^25.3"
pre-commit = "^4.4"
pylint = "^4.0"
pytest = "^9.0"
pytest-cov = "^7.0"
pytest-mypy = "^1.0"
Sphinx = "^7.4"
defusedxml = "^0.7"
types-requests = "^2.32.4.20250913"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["online"]
